--- a/journal.html
+++ b/journal.html
@@ -60,11 +60,17 @@ I made my photo card of Lightning Mcqueen today. My website is progressing well!
 Journal Entry #2: 10/16/25
 Today I added a second car so that both animations are running smoothly on my index page. I also need to find a way to flip the top car so it goes to the right forwards instead of backwards.
 </p>
+
 <p>
-Journal Entry #2: 10/23/25
+Journal Entry #3: 10/23/25
 Today I made the top car run forward instead of backwards and I removed the two blue dashes. I hope to get to work on my projects page next.
 </p>
-</div>
 
+<p>
+Journal Entry #4: 10/30/25
+The other day I published my website using Terminal and I am so glad that other people can finally see it! My next step is to actually make some projects!
+</p>
+
+</div>
 </body>
 </html>
