--- a/projects.html
+++ b/projects.html
@@ -1,19 +1,45 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
+
+<style type="text/css">
+ 
+	body{
+		margin:0px;
+		background-color:lightblue;
+		font-family: "Architects Daughter", cursive;
+	}
+
+
+	a{
+		text-decoration: none;
+	}
+
+#road{
 	
+	width: 100%;
+	height: 500px;
+	background-color: #555;
+	padding-top:100px;
+}
 
-
-
+</style>
 
 </head>
 
 
 <body>
-
+<center>
+	<h1>alex's website</h1>
+<div id="road"> 
 here is <a href="index.html">home page</a>
 here is <a href="journal.html">journal page</a>
-
+</div>
+</center>
 
 
 
