--- a/projects.html
+++ b/projects.html
@@ -39,9 +39,11 @@
 here is <a href="index.html">home page</a>
 here is <a href="journal.html">journal page</a>
 </div>
+
 </center>
-
-
+Here is the <a href="index.html">home page</a>.
+Here is the <a href="journal.html">journal page</a>.
+<p>Project 1. This is my <a href="eventlistener.html"> typing game</a></p>
 
 </body>
 </html>
