updated projects page

--- a/journal.html
+++ b/journal.html
@@ -71,6 +71,11 @@ Journal Entry #4: 10/30/25
 The other day I published my website using Terminal and I am so glad that other people can finally see it! My next step is to actually make some projects!
 </p>
 
+<p>
+Journal Entry #5: 11/17/25
+I now have three successful event listeners on my projects page! They are linked and now I want to make my projects page more aesthetically pleasing!
+</p>
+
 </div>
 </body>
 </html>
