--- a/projects.html
+++ b/projects.html
@@ -19,14 +19,24 @@
 		text-decoration: none;
 	}
 
-#road{
+/*#road{
 	
 	width: 100%;
 	height: 500px;
 	background-color: #555;
-	padding-top:100px;
-}
+	padding-top:100px;*/
+/*}*/
 
+.line{
+	height:3px;
+	width:100%;
+	background-color:black;
+}
+.line2{
+	height: 3px;
+	width: 100%;
+	background-color:black;
+}
 </style>
 
 </head>
@@ -35,15 +45,21 @@
 <body>
 <center>
 	<h1>alex's website</h1>
-<div id="road"> 
+	<div class="line"></div>
+
+
+<h2>
+	<!-- <div id="road">  -->
 here is <a href="index.html">home page</a>
 here is <a href="journal.html">journal page</a>
-</div>
-
+<!-- </div> -->
+</h2>
+<div class="line2"></div>
 </center>
-Here is the <a href="index.html">home page</a>.
-Here is the <a href="journal.html">journal page</a>.
+<!-- Here is the <a href="index.html">home page</a>.
+Here is the <a href="journal.html">journal page</a>. -->
 <p>Project 1. This is my <a href="eventlistener.html"> typing game</a></p>
-
+<p>Project 2. This is my <a href="mater.html">mouse game</a><p>
+	<p>Project 3. This is my <a href="egg.html">egg game</a></p>
 </body>
 </html>
