--- a/projects.html
+++ b/projects.html
@@ -61,5 +61,6 @@ Here is the <a href="journal.html">journal page</a>. -->
 <p>Project 1. This is my <a href="eventlistener.html"> typing game</a></p>
 <p>Project 2. This is my <a href="mater.html">mouse game</a><p>
 	<p>Project 3. This is my <a href="egg.html">egg game</a></p>
+	<p>Project 4. This is my <a href="button.html">button game</a></p>
 </body>
 </html>
