I added two more projects

--- a/projects.html
+++ b/projects.html
@@ -62,5 +62,6 @@ Here is the <a href="journal.html">journal page</a>. -->
 <p>Project 2. This is my <a href="mater.html">mouse game</a><p>
 	<p>Project 3. This is my <a href="egg.html">egg game</a></p>
 	<p>Project 4. This is my <a href="button.html">button game</a></p>
+	<p>Project 5. This is my <a href="function.html">function game</a></p>
 </body>
 </html>
