here is my sixth journal entry

--- a/journal.html
+++ b/journal.html
@@ -76,6 +76,10 @@ Journal Entry #5: 11/17/25
 I now have three successful event listeners on my projects page! They are linked and now I want to make my projects page more aesthetically pleasing!
 </p>
 
+<p>
+Journal Entry #6: 11/21/25
+I finished a total of seven projects now and I made my projects page more simple so I am excited to make many more projects now!
+</p>
 </div>
 </body>
 </html>
