--- a/journal.html
+++ b/journal.html
@@ -80,6 +80,11 @@ I now have three successful event listeners on my projects page! They are linked
 Journal Entry #6: 11/21/25
 I finished a total of seven projects now and I made my projects page more simple so I am excited to make many more projects now!
 </p>
+
+<p>
+Journal Entry #7: 12/2/25
+I uploaded my two new projects and my website is coming along great! I might add a new about me page later if I have time.
+</p>
 </div>
 </body>
 </html>
