--- a/projects.html
+++ b/projects.html
@@ -63,7 +63,9 @@ Here is the <a href="journal.html">journal page</a>. -->
 	<p>Project 3. This is my <a href="egg.html">egg game</a></p>
 	<p>Project 4. This is my <a href="button.html">button game</a></p>
 	<p>Project 5. This is my <a href="function.html">function game</a></p>
-	<p>Project 6. This is my <a href="lightningClick.html">click game</a></p>
-	<p>Project 7. This is my <a href="testing.html">Reaction Test game</a></p>
+	<p>Project 6. This is my <a href="lightningClick.html">clicking game</a></p>
+	<p>Project 7. This is my <a href="testing.html">Reaction Test game </a></p>
+	<p>Project 8. This is my <a href="clash.html">Clash Royale clicker game</a></p>
+	<p>Project 9. This is my <a href="trafficLight.html">Traffic light animation game</a></p>
 </body>
 </html>
