--- a/journal.html
+++ b/journal.html
@@ -85,6 +85,9 @@ I finished a total of seven projects now and I made my projects page more simple
 Journal Entry #7: 12/2/25
 I uploaded my two new projects and my website is coming along great! I might add a new about me page later if I have time.
 </p>
+<p>
+Journal Entry #8: 12/18/25
+I uploaded more projects and just finished my holiday card. Over the break I want to make sure all the links are working!
 </div>
 </body>
 </html>
