--- a/projects.html
+++ b/projects.html
@@ -67,5 +67,6 @@ Here is the <a href="journal.html">journal page</a>. -->
 	<p>Project 7. This is my <a href="testing.html">Reaction Test game </a></p>
 	<!-- <p>Project 8. This is my <a href="clash.html">Clash Royale clicker game</a></p> -->
 	<p>Project 8. This is my <a href="trafficLight.html">Traffic light animation game</a></p>
+	<p>Project 9. This is my <a href="holidaycard.html">Holiday Card game</a></p>
 </body>
 </html>
