new journal entry

--- a/projects.html
+++ b/projects.html
@@ -68,5 +68,7 @@ Here is the <a href="journal.html">journal page</a>. -->
 	<!-- <p>Project 8. This is my <a href="clash.html">Clash Royale clicker game</a></p> -->
 	<p>Project 8. This is my <a href="trafficLight.html">Traffic light animation game</a></p>
 	<p>Project 9. This is my <a href="holidaycard.html">Holiday Card game</a></p>
+	<p>Project 10. This is my <a href="whackleonbridges.html">Whack Leon Bridges game</a></p>
+	<p>Project 11. This is my <a href="array.html">Cars randomized quiz game</a></p>
 </body>
 </html>
