--- a/journal.html
+++ b/journal.html
@@ -88,6 +88,10 @@ I uploaded my two new projects and my website is coming along great! I might add
 <p>
 Journal Entry #8: 12/18/25
 I uploaded more projects and just finished my holiday card. Over the break I want to make sure all the links are working!
+</p>
+<p>Journal Entry #9: 1/8/26
+I added more projects and I learned how to randomize things! I want to make a present for someone now.
+</p>
 </div>
 </body>
 </html>
