confetti and journal entry

--- a/journal.html
+++ b/journal.html
@@ -92,6 +92,9 @@ I uploaded more projects and just finished my holiday card. Over the break I wan
 <p>Journal Entry #9: 1/8/26
 I added more projects and I learned how to randomize things! I want to make a present for someone now.
 </p>
+<p>Journal Entry #10: 1/12/26
+I added a confetti project and I learned how to randomize colors! I want to make a present for someone now.
+</p>
 </div>
 </body>
 </html>
