--- a/projects.html
+++ b/projects.html
@@ -70,5 +70,6 @@ Here is the <a href="journal.html">journal page</a>. -->
 	<p>Project 9. This is my <a href="holidaycard.html">Holiday Card game</a></p>
 	<p>Project 10. This is my <a href="whackleonbridges.html">Whack Leon Bridges game</a></p>
 	<p>Project 11. This is my <a href="array.html">Cars randomized quiz game</a></p>
+	<p>Project 12. This is my <a href="confetti.html">Confetti game</a></p>
 </body>
 </html>
