--- a/confettiSwing.html
+++ b/confettiSwing.html
@@ -3,7 +3,7 @@
 <head>
 	<style type="text/css">
 		body{
-			background-color: black;
+			background-color: white;
 		}
 		.confetti{
 			width: 10px;
@@ -12,8 +12,27 @@
 			display: inline-block;
 			border: 5px solid;
 			position: absolute;
+			animation-name: swing3d;
+			animation-duration: 2s;
+			animation-iteration-count: infinite;
+			animation-direction: alternate;
+			animation-timing-function: ease-in-out;
 }
-
+@keyframes swing {
+from {
+	transform: rotate(var(--startRotate));
+}
+to {
+	transform: rotate(var(--endRotate));
+}
+}
+@keyframes swing3d {
+	from {
+		transform: rotateZ(-65deg)rotateX(-65deg) rotateY(-180deg);
+	}
+	to{
+		transform: rotateZ(65deg) rotateX(65deg)rotateY(180deg);
+	}
 }
 </style>
 </head>
@@ -28,6 +47,8 @@
 		let g=Math.round(Math.random()*255)
 		let b=Math.round(Math.random()*255)
 		let rotation = Math.random() * 360
+		let startRotate = Math.random() * -67 + "deg"
+		let endRotate = Math.random() * 67 + "deg"
 square.style.backgroundColor="rgb("+r+", "+g+", "+b+")"
 square.style.borderColor="rgb("+r+", "+g+", "+b+")"
 square.style.top = Math.random() * 1000 + "px"
@@ -39,6 +60,8 @@ square.style.transform = "rotate(" + rotation + "deg)"
 		let x = Math.round(Math.random()*2)
 		// square.style.backgroundColor = colors[x]
 		square.style.borderColor=colors[x]
+		square.style.setProperty("--startRotate", startRotate)
+		square.style.setProperty("--endRotate", endRotate)
 		function fall() {
 			let fallFactor = 20
 			square.style.top = parseInt(square.style.top) + fallFactor + "px"
