--- a/projects.html
+++ b/projects.html
@@ -72,5 +72,6 @@ Here is the <a href="journal.html">journal page</a>. -->
 	<p>Project 11. This is my <a href="array.html">Cars randomized quiz game</a></p>
 	<p>Project 12. This is my <a href="confetti.html">Confetti game</a></p>
 	<p>Project 13. This is my <a href="confettiSwing.html">3d confetti game</a></p>
+	<p>Project 14. This is my <a href="train.html">train game</a></p>
 </body>
 </html>
