--- a/journal.html
+++ b/journal.html
@@ -95,6 +95,9 @@ I added more projects and I learned how to randomize things! I want to make a pr
 <p>Journal Entry #10: 1/12/26
 I added a confetti project and I learned how to randomize colors! I want to make a present for someone now.
 </p>
+<p>Journal Entry #11: 2/9/26
+I added a train project and I learned how to add and remove functions! I want to make a card for Molly now.
+</p>
 </div>
 </body>
 </html>
